--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "panda"
     ],
     "require": {
-        "php": ">=5.6.0",
-        "topthink/think-orm": "^1.2"
+        "php": ">=5.6.0"
     },
     "autoload": {
         "psr-4": {
